--- a/LAB18/WON5_tema18_4.html
+++ b/LAB18/WON5_tema18_4.html
@@ -94,9 +94,9 @@
         </tr>
         <tr>
             <td style="text-align: center; vertical-align: middle"><b>Exception</b></td>
-            <td>O excepție poate fi gestionata atunci cand este utilizata o clauza except sau finally sau o <br/>instructiune with a elementelor </td>
-            <td>try:<br/>...<br/>except SomeException:<br/>tb = sys.exc_info()[2]
-    raise OtherException(...).with_traceback(tb)<br/>l=[2, 5, 44.5, 28.9]<br/>print(statistics.mean(l))</td>
+            <td>O exceptie poate fi gestionata atunci cand este utilizata o clauza except sau finally sau o <br/>instructiune with a elementelor </td>
+            <td>try:<br/>&nbsp&nbsp&nbsp&nbspx = int(input("Please enter a number: "))<br/>&nbsp&nbsp&nbsp&nbspbreak<br/>except ValueError:<br/>
+            &nbsp&nbsp&nbsp&nbspprint("Oops!  That was no valid number.  Try again...")</td>
         </tr>
          <tr>
              <td style="text-align: center; vertical-align: middle"><b>lower</b></td>
