--- a/LAB18/WON5_tema18_4.html
+++ b/LAB18/WON5_tema18_4.html
@@ -93,20 +93,19 @@
         <th>Nume</th><th>Descriere</th><th>Exemplu</th>
         </tr>
         <tr>
-            <td style="text-align: center; vertical-align: middle"><b>Exception</b></td>
-            <td>O exceptie poate fi gestionata atunci cand este utilizata o clauza except sau finally sau o <br/>instructiune with a elementelor </td>
-            <td>try:<br/>&nbsp&nbsp&nbsp&nbspx = int(input("Please enter a number: "))<br/>&nbsp&nbsp&nbsp&nbspbreak<br/>except ValueError:<br/>
-            &nbsp&nbsp&nbsp&nbspprint("Oops!  That was no valid number.  Try again...")</td>
+            <td style="text-align: center; vertical-align: middle"><b>Numbers</b></td>
+            <td>Din acest obiect deriva toate tipurile de numere.</td>
+            <td>integer, float</td>
         </tr>
          <tr>
-             <td style="text-align: center; vertical-align: middle"><b>lower</b></td>
-             <td>se foloseste atunci cand vrem sa modificam un string astfel<br/>incat sa fie alcatuit doar din litere mici</td>
-             <td>s = 'jhjJJKMebbabM'<br/>s.lower()</td>
+             <td style="text-align: center; vertical-align: middle"><b>Collections</b></td>
+             <td>Din acest obiect deriva toate tipurile de obiecte iterabile.</td>
+             <td>list, string, dictionary</td>
         </tr>
         <tr>
-             <td style="text-align: center; vertical-align: middle"><b>split</b></td>
-             <td>se foloseste atunci cand dintr-un string dorim sa facem o lista<br/>de mai multe stringuri printr-o conditie definita</td>
-             <td>s = 'Hello World'<br/>new_s=s.split()<br/>print(new_s)</td>
+             <td style="text-align: center; vertical-align: middle"><b>Callebles</b></td>
+             <td>Din acest obiect deriva toate tipurile de obiecte care pot fi<br/> folosite "ca si functii".</td>
+             <td>functions, method</td>
         </tr>
     </table>
 </html>
