--- a/LAB18/WON5_tema18_5.html
+++ b/LAB18/WON5_tema18_5.html
@@ -2,6 +2,7 @@
     <head>
         <title>Note clasa</title>
     </head>
+    <body>
     <table
         cellspacing='2' cellpadding='10' border='2' >
         <tr>
@@ -39,4 +40,5 @@
             </td>
         </tr>
     </table>
+    </body>
 </html>
