--- a/LAB18/WON5_tema18_2.html
+++ b/LAB18/WON5_tema18_2.html
@@ -2,6 +2,7 @@
     <head>
         <title>Note clasa</title>
     </head>
+    <body>
     <table
         cellspacing='2' cellpadding='10' border='2' >
          <tr>
@@ -20,4 +21,5 @@
             <td>Bengescu</td><td>Hortensia</td><td><b>8.00</b></td>
         </tr>
     </table>
+    </body>
 </html>
