--- a/LAB18/WON5_tema18_2.html
+++ b/LAB18/WON5_tema18_2.html
@@ -4,21 +4,21 @@
     </head>
     <body>
     <table
-        cellspacing='2' cellpadding='10' border='2' >
+        cellspacing='2' cellpadding='10' border='2'>
          <tr>
             <th colspan="3">Medii generale clasa 10b</th>
         </tr>
         <tr>
-            <td>Ionescu</td><td>Miruna</td><td><b>9.75</b></td>
+            <td>Ionescu</td><td>Miruna</td><th>9.75</th>
         </tr>
         <tr>
-            <td>Popescu</td><td>Marcel</td><td><b>9.55</b></td>
+            <td>Popescu</td><td>Marcel</td><th>9.55</th>
         </tr>
         <tr>
-            <td>Dolanescu</td><td>Ion</td><td><b>8.25</b></td>
+            <td>Dolanescu</td><td>Ion</td><th>8.25</th>
         </tr>
         <tr>
-            <td>Bengescu</td><td>Hortensia</td><td><b>8.00</b></td>
+            <td>Bengescu</td><td>Hortensia</td><th>8.00</th>
         </tr>
     </table>
     </body>
