--- a/LAB18/WON5_tema18_4.html
+++ b/LAB18/WON5_tema18_4.html
@@ -102,7 +102,7 @@
              <td>list, string, dictionary</td>
         </tr>
         <tr>
-             <td style="text-align: center; vertical-align: middle"><b>Callebles</b></td>
+             <td style="text-align: center; vertical-align: middle"><b>Callables</b></td>
              <td>Din acest obiect deriva toate tipurile de obiecte care pot fi<br/> folosite "ca si functii".</td>
              <td>functions, method</td>
         </tr>
