--- a/LAB19/WON5_tema19_1.html
+++ b/LAB19/WON5_tema19_1.html
@@ -6,10 +6,11 @@
 </head>
 <body>
     <form action="target_page" method="post">
-        Username<br>
-        <input type="text" name="Username"/><br>
+        <div>Username</div>
+        <input type="text" name="Username"/>
         <br>
-        Password<br>
+        <br>
+        <div>Password</div>
         <input type='password' name='password'/><br>
         <br>
         <input type="checkbox" name="therm"> I agree with the terms and conditions<br>
