--- a/LAB19/WON5_tema19_2.html
+++ b/LAB19/WON5_tema19_2.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <title>FasttrackIT Student Portal</title>
 </head>
+<link rel="stylesheet" href="WON5_tema19_2.css" />
 <body>
-  <p >FasttrackIT Student Portal</p>
+    <div>FasttrackIT Student Portal</div>
     <form action="target_page" method="post">
-        <div>Username</div>
-        <input type="text" name="Username"/>
-        <br>
-        <br>
-        <div>Password</div>
-        <input type='password' name='password'/><br>
-        <br>
-        <input type="checkbox" name="therm"> I agree with the terms and conditions<br>
-        <br>
-        <input type='submit' value='Login'/>
+      <input type="text" name="Username" placeholder="Username"/>
+      <br>
+      <br>
+      <input type='password' name='password' placeholder="Password"/><br>
+      <br>
+      <input type="checkbox" name="therm"> Remember username <br>
+      <br>
+      <input type='submit' value='Login'/>
     </form>
 </body>
 </html>
