--- a/LAB19/WON5_tema19_1/WON5_tema19_1.html
+++ b/LAB19/WON5_tema19_1/WON5_tema19_1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
+<link rel="stylesheet" href="WON5_tema19_1.css" />
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
