--- a/LAB19/WON5_tema19_2/WON5_tema19_2.html
+++ b/LAB19/WON5_tema19_2/WON5_tema19_2.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <div>FasttrackIT Student Portal</div>
-    <form action="target_page" method="post">
+    <form action="target_page" method="post" class="flex-container">
       <input type="text" name="Username" placeholder="Username"/>
       <br>
       <br>
       <input type='password' name='password' placeholder="Password"/><br>
       <br>
-      <input type="checkbox" name="therm"> Remember username <br>
+      <input class="check" type="checkbox" name="therm"> Remember username <br>
       <br>
       <input type='submit' value='Login'/>
     </form>
