--- a/LAB19/WON5_tema19_4/WON5_tema19_4.html
+++ b/LAB19/WON5_tema19_4/WON5_tema19_4.html
@@ -5,6 +5,7 @@
     </head>
     <body>
     <div> Lista elevi clasa 10b </div>
+    <form action="login_page" method="post">
     <table
         class="center" cellpadding='10'>
         <tr>
@@ -37,5 +38,6 @@
             </td>
         </tr>
     </table>
+    </form>
     </body>
 </html>
