--- a/LAB20/WON5_tema20_4/WON5_tema20_4.html
+++ b/LAB20/WON5_tema20_4/WON5_tema20_4.html
@@ -10,21 +10,21 @@
   <form action="target_page" method="post" id="sign_in_form">
     <table class="center">
       <tr>
-          <th> <div id="header" >Create an account</div></th>
+          <th> <div id="header" >Create an Account</div></th>
       </tr>
       <tr>
           <td>
              <input type="text" id="name" placeholder="Username" />
           </td>
       </tr>
-      <tr><td> <div id="answer_user"></div></td></tr>
+      <tr><td> <div id="answer_user"> </div></td></tr>
       <tr>
           <td>
              <input type="password" id="pass" placeholder="Password" />
           </td>
       </tr>
       <tr>
-          <td> <div id="answer_pass"></div></td>
+          <td> <div id="answer_pass"> </div></td>
       </tr>
       <tr>
           <td>
@@ -32,15 +32,15 @@
           </td>
       </tr>
       <tr>
-          <td> <div id="answer_pass_repeat"></div></td>
+          <td> <div id="answer_pass_repeat"> </div></td>
       </tr>
       <tr>
           <td>
-               <input type="checkbox" name="therm" id="check"> I agree with the terms and conditions<br>
+              <input type="checkbox" name="therm" id="check"><label> I agree with the terms and conditions</label><br>
           </td>
       </tr>
       <tr>
-          <td> <div id="answer_check"></div></td>
+          <td> <div id="answer_check"> </div></td>
       </tr>
       <tr>
           <td>
